fix: login overflow

--- a/packages/ui/src/assets/scss/layers/login.scss
+++ b/packages/ui/src/assets/scss/layers/login.scss
@@ -16,7 +16,8 @@
   &-tiles {
     @include list-unstyled;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-auto-rows: 1fr;
     gap: 15px;
     text-align: center;
     font-size: 10px;
